teiidtools-339: Upgraded dataservices list to pfng and fixed layout issues related to pfng upgrade.

--- a/src/main/ngapp/src/app/dataservices/dataservices-list/dataservices-list.component.css
+++ b/src/main/ngapp/src/app/dataservices/dataservices-list/dataservices-list.component.css
@@ -3,6 +3,14 @@
   font-size: 1.7em;
 }
 
+.dataservice-list-description {
+  color: black;
+}
+
+.dataservice-list-name {
+  color: black;
+}
+
 .dataservice-list-quicklook-icon {
   margin-left: 20px;
   font-size: 1.3em;
@@ -54,3 +62,14 @@
   border-color: #00659c;
   color: white;
 }
+
+.list-pf-actions {
+  flex-grow: 1;
+  justify-content: flex-end;
+}
+
+.close {
+  float: left;
+}
+
+
